Minor updates to introduction and book list.

--- a/docs/spi_avalon_fpga/TeX_files/books.tex
+++ b/docs/spi_avalon_fpga/TeX_files/books.tex
@@ -1,4 +1,6 @@
-\section{FPGA and Verilog Book Commentary}
+\section{FPGA and Verilog Books}
+
+\subsection{Hobbyist FPGA Books}
 
 "Designing Video Game Hardware in Verilog"
 Steven Hugg, first printing 2018
@@ -20,16 +22,28 @@ known as ``IceStorm'':
 ``Programming FPGAs, Getting Started in Verilog''
 Simon Monk, 2017 McGraw-Hill Education
 
+Good coverage of beginning FPGA using the boards Elbert 2, Mojo, and Papilio.
+
+\url{https://www.amazon.com/Programming-FPGAs-Getting-Started-Verilog/dp/125964376X/ref=sr_1_1?keywords=fpga+monk&qid=1564448368&s=books&sr=1-1}
+
+\subsection{Verilog}
+
+You will need to go up the learning curve on Verilog (or VHDL).
+Here are a couple of inexpensive books (< \$20) which will get you going:
+
+``Designing Digital Systems with SystemVerilog''
+Brent E. Nelson, Brigham Young University
+
+\url{https://www.amazon.com/gp/product/1075968437/ref=ppx_yo_dt_b_asin_title_o00_s03?ie=UTF8&psc=1}
+
 ``Exploring Digital Logic''
 George Self.
 
 \url{http://www.lulu.com/shop/george-self/exploring-digital-logic/paperback/product-22747579.html}
 
-``Designing Digital Systems with SystemVerilog''
-Brent E. Nelson, Brigham Young University
+Free eBook by Intel:
 
 ``FPGAs for Dummies''
-eBook by Intel.
 
 \url{https://plan.seek.intel.com/PSG_WW_NC_LPCD_FR_2018_FPGAforDummiesbook}
 
