--- a/docs/spi_avalon_fpga/main.tex
+++ b/docs/spi_avalon_fpga/main.tex
@@ -16,7 +16,7 @@
 \usepackage{float}
 \usepackage{parskip}
 
-\title{An FPGA Learning Experience:  SPI interface to Max10 FPGA}
+\title{An FPGA Learning Experience:  SPI Interface to Max10 FPGA}
 \author{Gregory Raven, KF5N \\ greg.electricity@gmail.com}
 
 \begin{document}
@@ -31,10 +31,10 @@
 
 %\mainmatter
 \input{./TeX_files/introduction}
-\input{./TeX_files/books}
 \input{./TeX_files/dev_boards}
 \input{./TeX_files/choosing_fpga}
 \input{./TeX_files/ftdi_julia}
+\input{./TeX_files/books}
 
 %\backmatter
 % bibliography, glossary and index would go here.
