--- a/docs/spi_avalon_fpga/TeX_files/choosing_fpga.tex
+++ b/docs/spi_avalon_fpga/TeX_files/choosing_fpga.tex
@@ -24,29 +24,26 @@ Note that the USB capability of this board is for Flash programming only.  It is
 
 The reason for choosing the Elbert V2 was the book ``Programming FPGAs" by Simon Monk.  The book features the Elbert, along with the ``Mojo'' and ``Papilio'' boards.
 
-It is interesting to note that a quick search on Amazon shows only three ``hobbyist'' style books for FPGA.
-Contrast this to Arduino/Raspberry-Pi, where you will find dozens, maybe hundreds!
-
-If you have a specific application, then it will be straightforward to decide if the development board meets your requirements.  For a person who is only interested in getting going in FPGA, then more peripheral devices are better than less.  Also note that the example above has 39 IOs, so you can add your own.  If the IO is in the format of the common Arduino, then adding peripherals may be quite easy to accomplish.
+If you have a specific application, then it will be straightforward to decide if the development board meets your requirements.  For a person motivated to learn FPGA without without a specific application in mind should probably choose a board with more peripheral devices than less.  Also note that the example above has 39 IOs, so you can add your own peripherals.  If the IO is in the format of the common Arduino, then adding peripherals may be quite easy to accomplish.
 
 I was able to install the development software for the Elbert and work through a few of the projects in the book.
 However, I found the development tools lacking in one area.  I was interested in using a more modern version of Verilog, called ``SystemVerilog''.  So that was a bit of a problem, and a search for another board began.
 
 My motivation for SystemVerilog was to try some of the new features added, including those used for ``testbenches'' (simulation).  That is only an expression of my particular interest, as the Verilog used in the Xilinx tool for this device is fine and can be used for maximum benefit with this device.  This does, however, indicate that the development environment which mates up with the FPGA device is as important as the device itself.  So before you choose a board, be sure to download and install the development tools first.  Look at the documentation and decide if you will be comfortable with that particular development tool capabilities.
 
-So looking around a bit more, I found this board after viewing Bruce Land's great lecture series on youtube:
+Looking around a bit more, I found this board after viewing Bruce Land's great lecture series on youtube:
 
 \url{https://www.terasic.com.tw/cgi-bin/page/archive.pl?Language=English&CategoryNo=165&No=836}
 
 The DE1-SOC is used in Cornell's ``ECE 5760 Advanced Microcontroller Design and system-on-chip'' course.
 
-The board requires the "Quartus" development tool, which met my requirement for SystemVerilog.  However, this board is more complex than desired.  This board uses an advanced ''System On Chip'' (SOC) which is a combination of microcontroller (dual-core ARM Cortex A9) and FPGA in a single device.  Price is \$249, which seemed a little steep for a project which might not work out.  The added complexity of the ARM processors, having to deal with an unfamiliar distribution of Linux, and the extra work involved seemed like too much.  Indeed this board is immensely capable, so maybe I will come back to this one in the future!
+The board requires the "Quartus" development tool, which met my requirement for SystemVerilog.  However, this FPGA on this board well beyond a beginner!  This board uses an advanced ''System On Chip'' (SOC) which is a combination of microcontroller (dual-core ARM Cortex A9) and FPGA in a single device.  Price is \$249, which seemed a little steep for a project which might not work out.  The added complexity of the ARM processors, having to deal with an unfamiliar distribution of Linux running on the ARM processors, and the all of the extra work involved seemed like too much.  Indeed this board is immensely capable, so maybe I will come back to this one in the future!
 
-Fortunately the same company, Terasic, makes board which are better suited to a beginner.  Perusing their site, I found this board, the DE10-Lite (\$85):
+Fortunately the same company, Terasic, makes boards which are less complex (and less expensive).  Perusing their site, I found this board, the DE10-Lite (\$85):
 
 \url{https://www.terasic.com.tw/cgi-bin/page/archive.pl?Language=English&CategoryNo=234&No=1021}
 
-This looked like a good choice, and it was purchased.  Later when doing internet searches, there was plenty of example projects already available for this board.  It seems to be at least moderately popular in the academic world, and some courses have been based on this board.  The MAX10 FPGA is widely supported, although it is not included in the latest version of the Quartus development tool (latest version supported 2018).
+This looked like a good choice, and I purchased it.  Later when doing internet searches, I found there are plenty of example projects already available for this board.  It seems to be at least moderately popular in the academic world, and some courses have been based on this board.  The MAX10 FPGA is widely supported, although it is not included in the latest version of the Quartus development tool (latest version supported 2018).
 
 A good feature of this board is the Arduino compatible expansion header.  In general, the DE10-Lite has been easy to work with, and seems to be robust.  I've been using it for many months and it is still alive!
 
