--- a/docs/spi_avalon_fpga/main.tex
+++ b/docs/spi_avalon_fpga/main.tex
@@ -33,6 +33,7 @@
 \input{./TeX_files/introduction}
 \input{./TeX_files/choosing_fpga}
 \input{./TeX_files/ftdi_julia}
+\input{./TeX_files/julia_lang}
 \input{./TeX_files/books}
 
 %\backmatter
