--- a/docs/spi_avalon_fpga/main.tex
+++ b/docs/spi_avalon_fpga/main.tex
@@ -35,8 +35,6 @@
 \input{./TeX_files/ftdi_julia}
 \input{./TeX_files/julia_lang}
 \input{./TeX_files/books}
-
-%\backmatter
-% bibliography, glossary and index would go here.
+\input{./TeX_files/conclusion}
 
 \end{document}
